--- a/colapp/README
+++ b/colapp/README
@@ -1,1 +1,4 @@
-GAE files
+mol-apps/ GAE files
+colexport/ SQL for exporting COL mysql database to CSVs
+bulkuploaders/ .yaml files for uploading COL data to GAE
+
