--- a/colapp/app/README
+++ b/colapp/app/README
@@ -1,3 +1,1 @@
-mol-apps/ GAE files
-colexport/ SQL for exporting COL mysql database to CSVs
-bulkuploaders/ .yaml files for uploading COL data to GAE
+GAE files
